CP5.4: accounts filter on home, carried through every drill-through
- txn.Slice (currency + accounts) and Scope.SLICE replace the currency predicate in every
  figure and list: month summary, category detail, transactions, recurring overview
- accounts query parameter on /api/insights/month, /api/insights/categories/{id},
  /api/transactions, /api/subscriptions
- Home account chips (URL ?accounts=), links carry the filter, removable chips on the
  transactions and recurring screens; demo honours the filter
- AccountsFilterTest: hand-computed one-account month, filtered figures equal their
  filtered drill-through, accounts add up to all, committed follows the filter
- M5 CHANGELOG entry

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QU5sorEfYeUDuaFg6XxAup